deploy-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
spec:
  type: ClusterIP
  selector:
    app: bankapp
  ports:
    - port: 80
      targetPort: 80
