state-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb
spec:
  type: ClusterIP
  selector:
    app: bankdb
  ports:
    - port: 3306
      targetPort: 3306
